--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -41,6 +41,9 @@
 				{% if site.owner.tumblr %}<li>
 					<a href="http://{{ site.owner.tumblr }}.tumblr.com"><i class="fa fa-fw fa-tumblr"></i> Tumblr</a>
 				</li>{% endif %}
+				{% if site.owner.soundcloud %}<li>
+					<a href="https://soundcloud.com/{{ site.owner.soundcloud }}"><i class="fa fa-fw fa-soundcloud"></i> Soundcloud</a>
+				</li>{% endif %}
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li>
