--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -63,6 +63,7 @@ body {
 	h1 {
 		margin: 10px 20px;
 		font-weight: 700;
+		font-family: monospace;
 		@include font-rem(32);
 		color: lighten($base-color,20);
 
@@ -78,7 +79,7 @@ body {
 	h2 {
 		margin: 0;
 		@include font-rem(18);
-		text-transform: uppercase;
+		font-family: monospace;		
 		color: lighten($base-color,40);
 
 		@media #{$medium} {
@@ -122,7 +123,6 @@ body {
 	h2 {
 		margin: 0;
 		color: #fff;
-		text-transform: uppercase;
 
 		@media #{$medium} {
 			a {
