--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -56,6 +56,10 @@ body {
 	position: relative;
 }
 
+.entry-title {
+	font-family: monospace;	
+}
+
 .header-title {
 	text-align: center;
 	margin: 30px 0 0;
@@ -114,7 +118,7 @@ body {
 		margin: 10px 60px;
 		color: #fff;
 		text-shadow: 1px 1px 4px rgba($base-color,0.6);
-
+		font-family: monospace;
 		a {
 			color: #fff;
 		}
@@ -123,7 +127,7 @@ body {
 	h2 {
 		margin: 0;
 		color: #fff;
-
+		font-family: monospace;
 		@media #{$medium} {
 			a {
 				color: #fff;
@@ -287,10 +291,6 @@ header .entry-meta {
 			max-width: 800px;
 			margin: 50px auto 30px auto;
 			padding: 50px 80px;
-
-			> p:first-child {
-				@include font-size(20);
-			}
 		}
 	}
 
